--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,8 @@
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
     <title>John Milner Development Portfolio</title>
     <link rel="icon" type="image/png" href="assets/images/icon.png">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+
     <!-- build:css assets/styles/styles.css -->
     <link rel="stylesheet" href="temp/styles/styles.css">
     <!-- endbuild -->
@@ -25,8 +27,17 @@
             <div class="container" id="home">
                 <div class="row">
                     <div class="spinner">
-                        <div class="double-bounce1"></div>
-                        <div class="double-bounce2"></div>
+                        <h1 class="ml8">
+                            <span class="letters-container">
+                            <span class="letters letters-left">Hi</span>
+                            <span class="letters bang">!</span>
+                            </span>
+                            <span class="circle circle-white"></span>
+                            <span class="circle circle-dark"></span>
+                            <span class="circle circle-container"><span class="circle circle-dark-dashed"></span></span>
+                        </h1> 
+                        <!-- <div class="double-bounce1"></div>
+                        <div class="double-bounce2"></div> -->
                     </div>
                     <div class="box1">
                         <div class="navigation" id="navigation">
@@ -41,15 +52,7 @@
                             <nav class="navigation__nav">
                                 <ul class="navigation__list">
                                     <li class="navigation__item nav-logo">
-                                            <!-- <h1 class="ml8">
-                                                    <span class="letters-container">
-                                                    <span class="letters letters-left">Hi</span>
-                                                    <span class="letters bang">!</span>
-                                                    </span>
-                                                    <span class="circle circle-white"></span>
-                                                    <span class="circle circle-dark"></span>
-                                                    <span class="circle circle-container"><span class="circle circle-dark-dashed"></span></span>
-                                            </h1>  -->
+                                            
                                     </li>
                                     <li class="navigation__item js-scroll-trigger">
                                         <a href="#home" class="navigation__link">
